// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update artcicle container test suite render container should render as expected 1`] = `
<div
  className="container article-body"
>
  <div
    className="articles-card"
  >
    <div
      className="article-buttons"
    >
      <button
        className="btn article-whitebutton"
        onClick={[Function]}
        type="submit"
      >
        Update
      </button>
    </div>
    <Connect(ImageUploader)
      imageUploaded={[Function]}
    />
    <form>
      <textarea
        id="title"
        onChange={[Function]}
        value="some title"
      />
      <ReactMediumEditor
        className="editable"
        name="body"
        onChange={[Function]}
        options={
          Object {
            "placeholder": false,
            "toolbar": Object {
              "buttons": Array [
                "bold",
                "italic",
                "underline",
                "strikethrough",
                "quote",
                "anchor",
                "h2",
                "h3",
                "orderedlist",
              ],
            },
          }
        }
        tag="div"
        text="somebody"
      />
    </form>
  </div>
  <div
    className="article-fixed-buttons"
  >
    <button
      className="btn article-fixed-whitebutton"
      onClick={[Function]}
      type="submit"
    >
      Update
    </button>
  </div>
</div>
`;

exports[`update artcicle container test suite renders properly when mounted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UpdateArticles
    getAnArticle={
      [MockFunction] {
        "calls": Array [
          Array [
            "we-are-here",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    imageUploadStatus={
      Object {
        "error": false,
        "success": false,
      }
    }
    match={
      Object {
        "params": Object {
          "slug": "we-are-here",
        },
      }
    }
    status={
      Object {
        "error": false,
        "success": false,
      }
    }
    updateArticle={[MockFunction]}
    updatedArticle={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="articles-card"
        >
          <div
            className="article-buttons"
          >
            <button
              className="btn article-whitebutton"
              onClick={[Function]}
              type="submit"
            >
              Update
            </button>
          </div>
          <Connect(ImageUploader)
            imageUploaded={[Function]}
          />
          <form>
            <textarea
              id="title"
              onChange={[Function]}
              value=""
            />
            <ReactMediumEditor
              className="editable"
              name="body"
              onChange={[Function]}
              options={
                Object {
                  "placeholder": false,
                  "toolbar": Object {
                    "buttons": Array [
                      "bold",
                      "italic",
                      "underline",
                      "strikethrough",
                      "quote",
                      "anchor",
                      "h2",
                      "h3",
                      "orderedlist",
                    ],
                  },
                }
              }
              tag="div"
              text=""
            />
          </form>
        </div>,
        <div
          className="article-fixed-buttons"
        >
          <button
            className="btn article-fixed-whitebutton"
            onClick={[Function]}
            type="submit"
          >
            Update
          </button>
        </div>,
      ],
      "className": "container article-body",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="article-buttons"
            >
              <button
                className="btn article-whitebutton"
                onClick={[Function]}
                type="submit"
              >
                Update
              </button>
            </div>,
            <Connect(ImageUploader)
              imageUploaded={[Function]}
            />,
            <form>
              <textarea
                id="title"
                onChange={[Function]}
                value=""
              />
              <ReactMediumEditor
                className="editable"
                name="body"
                onChange={[Function]}
                options={
                  Object {
                    "placeholder": false,
                    "toolbar": Object {
                      "buttons": Array [
                        "bold",
                        "italic",
                        "underline",
                        "strikethrough",
                        "quote",
                        "anchor",
                        "h2",
                        "h3",
                        "orderedlist",
                      ],
                    },
                  }
                }
                tag="div"
                text=""
              />
            </form>,
          ],
          "className": "articles-card",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn article-whitebutton"
                onClick={[Function]}
                type="submit"
              >
                Update
              </button>,
              "className": "article-buttons",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Update",
                "className": "btn article-whitebutton",
                "onClick": [Function],
                "type": "submit",
              },
              "ref": null,
              "rendered": "Update",
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "imageUploaded": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <textarea
                  id="title"
                  onChange={[Function]}
                  value=""
                />,
                <ReactMediumEditor
                  className="editable"
                  name="body"
                  onChange={[Function]}
                  options={
                    Object {
                      "placeholder": false,
                      "toolbar": Object {
                        "buttons": Array [
                          "bold",
                          "italic",
                          "underline",
                          "strikethrough",
                          "quote",
                          "anchor",
                          "h2",
                          "h3",
                          "orderedlist",
                        ],
                      },
                    }
                  }
                  tag="div"
                  text=""
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "id": "title",
                  "onChange": [Function],
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "textarea",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "editable",
                  "name": "body",
                  "onChange": [Function],
                  "options": Object {
                    "placeholder": false,
                    "toolbar": Object {
                      "buttons": Array [
                        "bold",
                        "italic",
                        "underline",
                        "strikethrough",
                        "quote",
                        "anchor",
                        "h2",
                        "h3",
                        "orderedlist",
                      ],
                    },
                  },
                  "tag": "div",
                  "text": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "form",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn article-fixed-whitebutton"
            onClick={[Function]}
            type="submit"
          >
            Update
          </button>,
          "className": "article-fixed-buttons",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Update",
            "className": "btn article-fixed-whitebutton",
            "onClick": [Function],
            "type": "submit",
          },
          "ref": null,
          "rendered": "Update",
          "type": "button",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="articles-card"
          >
            <div
              className="article-buttons"
            >
              <button
                className="btn article-whitebutton"
                onClick={[Function]}
                type="submit"
              >
                Update
              </button>
            </div>
            <Connect(ImageUploader)
              imageUploaded={[Function]}
            />
            <form>
              <textarea
                id="title"
                onChange={[Function]}
                value=""
              />
              <ReactMediumEditor
                className="editable"
                name="body"
                onChange={[Function]}
                options={
                  Object {
                    "placeholder": false,
                    "toolbar": Object {
                      "buttons": Array [
                        "bold",
                        "italic",
                        "underline",
                        "strikethrough",
                        "quote",
                        "anchor",
                        "h2",
                        "h3",
                        "orderedlist",
                      ],
                    },
                  }
                }
                tag="div"
                text=""
              />
            </form>
          </div>,
          <div
            className="article-fixed-buttons"
          >
            <button
              className="btn article-fixed-whitebutton"
              onClick={[Function]}
              type="submit"
            >
              Update
            </button>
          </div>,
        ],
        "className": "container article-body",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="article-buttons"
              >
                <button
                  className="btn article-whitebutton"
                  onClick={[Function]}
                  type="submit"
                >
                  Update
                </button>
              </div>,
              <Connect(ImageUploader)
                imageUploaded={[Function]}
              />,
              <form>
                <textarea
                  id="title"
                  onChange={[Function]}
                  value=""
                />
                <ReactMediumEditor
                  className="editable"
                  name="body"
                  onChange={[Function]}
                  options={
                    Object {
                      "placeholder": false,
                      "toolbar": Object {
                        "buttons": Array [
                          "bold",
                          "italic",
                          "underline",
                          "strikethrough",
                          "quote",
                          "anchor",
                          "h2",
                          "h3",
                          "orderedlist",
                        ],
                      },
                    }
                  }
                  tag="div"
                  text=""
                />
              </form>,
            ],
            "className": "articles-card",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="btn article-whitebutton"
                  onClick={[Function]}
                  type="submit"
                >
                  Update
                </button>,
                "className": "article-buttons",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Update",
                  "className": "btn article-whitebutton",
                  "onClick": [Function],
                  "type": "submit",
                },
                "ref": null,
                "rendered": "Update",
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "imageUploaded": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <textarea
                    id="title"
                    onChange={[Function]}
                    value=""
                  />,
                  <ReactMediumEditor
                    className="editable"
                    name="body"
                    onChange={[Function]}
                    options={
                      Object {
                        "placeholder": false,
                        "toolbar": Object {
                          "buttons": Array [
                            "bold",
                            "italic",
                            "underline",
                            "strikethrough",
                            "quote",
                            "anchor",
                            "h2",
                            "h3",
                            "orderedlist",
                          ],
                        },
                      }
                    }
                    tag="div"
                    text=""
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "id": "title",
                    "onChange": [Function],
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "textarea",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "editable",
                    "name": "body",
                    "onChange": [Function],
                    "options": Object {
                      "placeholder": false,
                      "toolbar": Object {
                        "buttons": Array [
                          "bold",
                          "italic",
                          "underline",
                          "strikethrough",
                          "quote",
                          "anchor",
                          "h2",
                          "h3",
                          "orderedlist",
                        ],
                      },
                    },
                    "tag": "div",
                    "text": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "form",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn article-fixed-whitebutton"
              onClick={[Function]}
              type="submit"
            >
              Update
            </button>,
            "className": "article-fixed-buttons",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Update",
              "className": "btn article-fixed-whitebutton",
              "onClick": [Function],
              "type": "submit",
            },
            "ref": null,
            "rendered": "Update",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
